[package]
name = "quickrandr"
version = "0.3.2"
authors = ["Marvin Löbel <loebel.marvin@gmail.com>"]
license = "MIT"

description = "A command line tool for saving and restoring xrandr display configurations"
readme = "README.md"

repository = "https://github.com/Kimundi/quickrandr"
keywords = ["xrandr", "display", "automatic", "configuration", "cli"]
categories = [ "command-line-utilities" ]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
clap = "2.0"
xdg = "2.0"

# Actually unneeded, as we don't need to parse the edid data
#edid = "*"
